Update index.html for new resume

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <a href="tel:+917774928309" class="icon-hover text-green-400" aria-label="Phone"><i class="fas fa-phone"></i></a>
         <a href="mailto:aniketbali777@gmail.com" class="icon-hover text-red-400" aria-label="Email"><i class="fas fa-envelope"></i></a>
       </div>
-      <a href="./aniket bali.pdf" target="_blank" class="inline-block mt-5 px-5 py-2 border border-gray-400 text-gray-300 hover:bg-gray-700 transition rounded">Download Resume</a>
+      <a href="./Aniket.pdf" target="_blank" class="inline-block mt-5 px-5 py-2 border border-gray-400 text-gray-300 hover:bg-gray-700 transition rounded">Download Resume</a>
     </div>
     <div>
       <img src="profile irani.jpeg" alt="Profile Picture of Aniket Bali" class="w-64 mt-10 md:mt-0 rounded-lg shadow-lg" />
@@ -169,7 +169,7 @@
   </main>
 
   <footer class="bg-gray-900 text-center py-6 mt-10">
-    <a href="./aniket bali.pdf" target="_blank" class="inline-block mt-5 px-5 py-2 border border-gray-400 text-gray-300 hover:bg-gray-700 transition rounded">Download Resume</a>
+    <a href="./Aniket.pdf" target="_blank" class="inline-block mt-5 px-5 py-2 border border-gray-400 text-gray-300 hover:bg-gray-700 transition rounded">Download Resume</a>
     <div class="flex justify-center mt-4 gap-4 text-xl">
         <a href="https://www.linkedin.com/in/aniket-bali-0270761a0?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="icon-hover text-blue-400" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/IchBinAniket" class="icon-hover text-gray-300" aria-label="GitHub"><i class="fab fa-github"></i></a>
